--- a/garden-shop/dev/components/tags/tags.scss
+++ b/garden-shop/dev/components/tags/tags.scss
@@ -12,6 +12,10 @@
         border-radius: 5px;
         padding: 5px 10px;
         white-space: nowrap;
+        &_active {
+            color: #212121;
+            border: 1px solid #ebebeb;
+        }
     }
     &__btn {
         cursor: pointer;
