--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -79,6 +79,14 @@ body {
 	margin-top: 20px;
 }
 
+.mt-30 {
+	margin-top: 30px;
+}
+
+.mt-40 {
+	margin-top: 40px;
+}
+
 .pl-40 {
 	padding-left: 40px !important;
 }
@@ -126,6 +134,11 @@ body {
 			--color: #0d2e30;
 		}
 	}
+	&_gray {
+		color: #212121;
+		background-color: #f7f8fb;
+		border: 1px solid #ebebeb;
+	}
 	&_transparent {
 		background-color: transparent;
 		border: 1px solid var(--color);
@@ -156,6 +169,10 @@ body {
 		color: #8a8894;
 		cursor: default;
 		pointer-events: none;
+	}
+	&_center {
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
@@ -500,6 +517,23 @@ body {
 			color: #fff;
 			background: #e25b26;
 		}
+	}
+}
+
+.select {
+	position: relative;
+	&__input {
+		display: none;
+	}
+	&__title {
+		border-radius: 4px;
+		border: 1px solid #ebebeb;
+		background: #fff;
+		padding: 14px 15px;
+		padding-right: 49px;
+	}
+	&__caret {
+		right: 15px !important;
 	}
 }
 
@@ -1622,6 +1656,7 @@ body {
 		}
 	}
 }
+
 
 @media (max-width: 1650px) {
 	.slider-navigation {
