--- a/garden-shop/release/components/article-item/article-item.css
+++ b/garden-shop/release/components/article-item/article-item.css
@@ -3,7 +3,6 @@
   overflow: hidden;
   position: relative;
   z-index: 1;
-  width: 360px;
   height: 250px;
   max-width: 100%;
   padding: 30px;
@@ -46,9 +45,13 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.article-item_light::after {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.25) 100%), url(image.png);
+}
 
 @media (max-width: 570px) {
   .article-item {
     width: 100%;
+    padding: 15px;
   }
 }
