--- a/garden-shop/release/components/footer/footer.html
+++ b/garden-shop/release/components/footer/footer.html
@@ -344,6 +344,21 @@
     </div>
 </div>
 
+
+<div class="popup popup_content" id="popup-text">
+    <div class="popup__title orange-bg white-text demibold">Как доехать в Санкт-Петербурге</div>
+    <div class="popup__body content">
+        <p>
+            Склад и офис продаж находится в 15 минутах езды на машине от метро Парнас. Съезд с Шоссейной улицы на
+            Торговую.
+        </p>
+        <p>
+            Также от метро Парнас можно добраться на общественном транспорте: доехать на 148 автобусе до ТЦ Мега Парнас
+            и пройтись 10 минут.
+        </p>
+    </div>
+</div>
+
 </body>
 
 </html>
