--- a/garden-shop/release/components/tags/tags.css
+++ b/garden-shop/release/components/tags/tags.css
@@ -14,6 +14,10 @@
   padding: 5px 10px;
   white-space: nowrap;
 }
+.tags__item_active {
+  color: #212121;
+  border: 1px solid #ebebeb;
+}
 .tags__btn {
   cursor: pointer;
   position: absolute;
