--- a/garden-shop/release/css/main.css
+++ b/garden-shop/release/css/main.css
@@ -78,6 +78,14 @@ body {
   margin-top: 20px;
 }
 
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
 .pl-40 {
   padding-left: 40px !important;
 }
@@ -123,6 +131,11 @@ body {
 .btn_green:active {
   --color: #0d2e30;
 }
+.btn_gray {
+  color: #212121;
+  background-color: #f7f8fb;
+  border: 1px solid #ebebeb;
+}
 .btn_transparent {
   background-color: transparent;
   border: 1px solid var(--color);
@@ -153,6 +166,10 @@ body {
   color: #8a8894;
   cursor: default;
   pointer-events: none;
+}
+.btn_center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .input {
@@ -473,6 +490,23 @@ body {
 .vanilla-calendar-day_selected {
   color: #fff;
   background: #e25b26;
+}
+
+.select {
+  position: relative;
+}
+.select__input {
+  display: none;
+}
+.select__title {
+  border-radius: 4px;
+  border: 1px solid #ebebeb;
+  background: #fff;
+  padding: 14px 15px;
+  padding-right: 49px;
+}
+.select__caret {
+  right: 15px !important;
 }
 
 .orange-text {
