--- a/garden-shop/dev/components/article-item/article-item.scss
+++ b/garden-shop/dev/components/article-item/article-item.scss
@@ -4,6 +4,7 @@
     position: relative;
     z-index: 1;
     height: 250px;
+    width: 360px;
     max-width: 100%;
     padding: 30px;
     display: flex;
