--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -48,11 +48,11 @@ body {
 }
 
 .bold {
-	font-weight: 500;
+	font-weight: 500 !important;
 }
 
 .demibold {
-	font-weight: 600;
+	font-weight: 600 !important;
 }
 
 .mb-10 {
@@ -1042,6 +1042,9 @@ body {
 			}
 		}
 	}
+	& .video-link {
+		height: auto;
+	}
 }
 
 .slider-scrollbar {
@@ -1292,23 +1295,26 @@ body {
 			}
 		}
 	}
+	& .article-item {
+		width: 100%;
+	}
 }
 
 .block-with-sidebar {
 	&__wrapper {
 		display: grid;
-		grid-template-columns: 2fr 10fr;
+		grid-template-columns: calc(16.7% - 15px) calc(83.3% - 15px);
 		gap: 30px;
 	}
 	&_right .block-with-sidebar__wrapper {
-		grid-template-columns: 10fr 2fr;
+		grid-template-columns: calc(83.3% - 15px) calc(33.3% - 15px);
 	}
 	&_4col {
 		& .block-with-sidebar__wrapper {
-			grid-template-columns: 4fr 8fr;
+			grid-template-columns: calc(33.3% - 15px) calc(66.7% - 15px);
 		}
 		&.block-with-sidebar_right .block-with-sidebar__wrapper {
-			grid-template-columns: 8fr 4fr;
+			grid-template-columns: calc(66.7% - 15px) calc(33.3% - 15px);
 		}
 	}
 }
@@ -1318,6 +1324,8 @@ body {
 	display: flex;
 	width: 100%;
 	height: 100%;
+	max-height: 570px;
+	overflow: hidden;
 	& img {
 		width: 100%;
 		height: 100%;
@@ -1657,6 +1665,85 @@ body {
 	}
 }
 
+.article-nav {
+	position: sticky;
+	left: 0;
+	top: 156px;
+	height: fit-content;
+	z-index: 4;
+	& .nav {
+		&__list {
+			padding: 30px;
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			border-radius: 5px;
+			border: 1px solid #ebebeb;
+			background: #f7f8fb;
+		}
+		&__item {
+			position: relative;
+			padding-left: 25px;
+			&::before {
+				display: block;
+				content: "";
+				width: 15px;
+				height: 2px;
+				position: absolute;
+				left: 0;
+				top: 9px;
+				background-color: #e25b26;
+			}
+		}
+		&__link {
+			&_active {
+				font-weight: 500;
+			}
+		}
+	}
+}
+
+.article-img {
+	display: block;
+	width: 315px;
+	height: 250px;
+	max-width: 100%;
+	border-radius: 5px;
+	overflow: hidden;
+	& img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+}
+
+.caution-text {
+	border-radius: 5px;
+	border: 1px solid #ebebeb;
+	background: #f7f8fb;
+	padding: 20px;
+	padding-left: 25px;
+	position: relative;
+	overflow: hidden;
+	margin: 40px 0;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	&:first-child {
+		margin-top: 0;
+	}
+	&::after {
+		display: block;
+		content: "";
+		width: 5px;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		top: 0;
+		background-color: #e25b26;
+	}
+}
 
 @media (max-width: 1650px) {
 	.slider-navigation {
@@ -1749,6 +1836,14 @@ body {
 	}
 	.order-info {
 		position: static;
+	}
+	.article-nav {
+		position: static;
+		& .nav {
+			&__list {
+				padding: 15px;
+			}
+		}
 	}
 }
 
