--- a/garden-shop/dev/components/default-slider/default-slider.scss
+++ b/garden-shop/dev/components/default-slider/default-slider.scss
@@ -11,6 +11,14 @@
     }
 }
 
+@media (max-width: 768px) {
+    .default-slider {
+        & .article-img {
+            width: 100%;
+        }
+    }
+}
+
 @media (max-width: 570px) {
     .default-slider {
         & .card {
