--- a/garden-shop/dev/components/contacts/contacts.scss
+++ b/garden-shop/dev/components/contacts/contacts.scss
@@ -3,6 +3,7 @@
         display: flex;
         align-items: center;
         gap: 8x;
+        white-space: nowrap;
         &_active {
             color: #e25b26;
         }
@@ -10,6 +11,10 @@
     &__links {
         display: flex;
         gap: 20px;
+        overflow-x: auto;
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     &__title {
         margin-bottom: 0;
@@ -97,6 +102,8 @@
             padding: 10px;
             position: relative;
             color: #212121;
+            font-size: 12px;
+            line-height: 130%;
             & svg {
                 display: none;
             }
@@ -115,6 +122,9 @@
                 height: 3px;
                 background-color: #e25b26;
             }
+        }
+        &__map {
+            height: 350px;
         }
     }
 }
