--- a/garden-shop/release/components/article-item/article-item.css
+++ b/garden-shop/release/components/article-item/article-item.css
@@ -50,9 +50,13 @@
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.25) 100%), url(image.png);
 }
 
+@media (max-width: 768px) {
+  .article-item {
+    padding: 15px;
+  }
+}
 @media (max-width: 570px) {
   .article-item {
     width: 100%;
-    padding: 15px;
   }
 }
