--- a/garden-shop/release/components/card/card.css
+++ b/garden-shop/release/components/card/card.css
@@ -1,6 +1,7 @@
 .card {
   width: 360px;
-  height: 396px;
+  max-height: 396px;
+  height: 100%;
   max-width: 100%;
   border: 1.5px solid #ebebeb;
   border-radius: 5px;
@@ -118,6 +119,7 @@
   width: 750px;
   padding: 0;
   grid-column: span 2;
+  max-height: none;
 }
 .card_kit .card__top {
   position: relative;
@@ -216,6 +218,7 @@
   height: auto;
   padding-right: 100px;
   width: 100%;
+  max-height: none;
 }
 .card_wide .card__body {
   padding: 0;
