--- a/garden-shop/release/components/default-slider/default-slider.css
+++ b/garden-shop/release/components/default-slider/default-slider.css
@@ -11,6 +11,11 @@
   position: static;
 }
 
+@media (max-width: 768px) {
+  .default-slider .article-img {
+    width: 100%;
+  }
+}
 @media (max-width: 570px) {
   .default-slider .card {
     height: auto;
